<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HardwareControler" 
    android:background="@android:color/holo_green_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive_textview" />

        <TextView
            android:id="@+id/rev_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_edittext" />

        <EditText
            android:hint="@string/data_to_send"
            android:id="@+id/send_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/openSerial_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/open_serial" />

            <Button
                android:id="@+id/closeSerial_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/openSerial_bt"
                android:layout_alignTop="@id/openSerial_bt"
                android:text="@string/close_serial"
                android:enabled="false" />

            <Button
                android:id="@+id/sendSerial_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/openSerial_bt"
                android:layout_below="@id/openSerial_bt"
                android:text="@string/send_data" />

            <Button
                android:id="@+id/clear_bt"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/sendSerial_bt"
                android:layout_toRightOf="@id/sendSerial_bt"
                android:text="@string/clear_data" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
